--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
        <link rel="stylesheet" href="./css/Estilos.css" />
     </head>
     <body>
-       <h1>Aqui vamos a hacer un blog</h1>
-       <p>Este es el parrafo de inicio</p>
+       <div id="contenedor">
+          <div id="post">
+            <h1>Este es el titulo del post, atractivo e interesante</h1>
+            <p>Este es el parrafo de inicio del blog, donde se explican las cosas de git</p>
+          </div>
+       </div>
     </body>
 </html>
