--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,7 @@
     </head>
     <body>
        <div id="contenedor">
+          <div id="cabecera">Inicio Cabecera</div>
           <div id="post">
             <h1>Este es el titulo del post, atractivo e interesante</h1>
             <p>Este es el parrafo de inicio del blog, donde se explican las cosas de git</p>
