--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,8 @@
           <div id="post">
             <h1>Este es el titulo del post, atractivo e interesante</h1>
             <p>Este es el parrafo de inicio del blog, donde se explican las cosas de git</p>
-          </div>
+            <p>Los blogs son la mejor forma de compartir informacion e ideas</p> 
+         </div>
        </div>
     </body>
 </html>
