--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
        <div id="contenedor">
           <div id="cabecera">
-            hyperBlog <span id="tagline">Tu blog de confianza</span>
+            hyperBlog <span id="tagline">Tu blog de cabecera</span>
          </div>
           <div id="post">
             <h1>Este es el titulo del post, atractivo e interesante</h1>
