--- a/blogpost.html
+++ b/blogpost.html
@@ -6,12 +6,13 @@
     <body>
        <div id="contenedor">
           <div id="cabecera">
-            hyperBlog <span id="tagline">Tu blog de confianza</span>
+            hyperBlog <span id="tagline">Tu blog Maestro</span>
          </div>
           <div id="post">
             <h1>Este es el titulo del post, atractivo e interesante</h1>
             <p>Este es el parrafo de inicio del blog, donde se explican las cosas de git</p>
             <p>Los blogs son la mejor forma de compartir informacion e ideas</p> 
+            <p>Suscribete y dale like</p>
          </div>
        </div>
     </body>
